# physical

./: dwcsimulation.py  extendeddwcsim.cpp  ionization.py  muoncancersim1.cpp
geant4_2025/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  NeutronHit.cc  NeutronHit.hh  NeutronSD.cc  NeutronSD.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  init_vis.mac  main.cc
geant4_2025/macros/: init_vis.mac  run.mac
geant4_2025/src/: main.cc
